07/16/11 (Jennifer)
Fixed a couple of Javadoc warnings (in Index and in IdBasedNamedGraphSetImpl).
Fixed a type mismatch warning/error that was caused by DecodingTriplesIterator not implementing ExtendedIterator.
Changed MySQLCompatibility to work with newer versions of MySQL.

07/15/11 (Jennifer)
Updated .classpath to reflect prior changes:
  Removed grddl.jar and tagsoup-1.2.jar
  Upgraded to ARQ 2.8.8 and Jena 2.6.4
Create replacement keystore because the old one had an expired certificate.
Upgraded to BouncyCastle 1.46 libraries.
Removed mysql-connector-java-3.2.0-alpha-bin.jar; very old.
  MySQL users should download the latest library and include it instead.
Code cleanup: Remove unnecessary imports and type casts; Add override statements.
In test code, add settings for HSQLDB file version.  Still default to in-memory for tests.
Use variable names when creating tables in HSQLCompatibility.

05/16/11 (Olaf)
Removed GRDDL support (it was deprecated with NG4J v.0.9.1)

05/02/11 (Olaf)
Upgrade to ARQ 2.8.8

01/20/11 (Olaf)
Upgrade to ARQ 2.8.7 (with Jena 2.6.4)

12/04/10 (Olaf)
Upgrade to ARQ 2.8.6

10/29/10 (Olaf)
Upgrade to SL4J 1.6.1

10/09/10 (Olaf)
Upgrade to Jena 2.6.3 and ARQ 2.8.5
Implemented support for LET clauses in the ID-based query engine.
Added the possibility to remove triples from ID-based graphs (even if that is inefficent because the ID-based graph implementation is optimized for read-only access).

09/27/10 (Jennifer)
Changed most of the code in QuadDB and DbCompatibility to use PreparedStatements instead of escaped strings.

09/24/10 (Jennifer)
Changed QuadDB to utilize com.sun.rowset.CachedRowSetImpl so that each ResultSet opened can be closed to prevent a memory leak that was occurring.
Created new method, preparedStatementsRequireTablesToExist, in DbCompatibility because more than 1 database falls in this category.
  Modified DbCompatibility.initializePreparedStatements() to check the above method and create tables if needed.